--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@babel/core": "^7.13.15",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.13.15",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "@vue/compiler-sfc": "^3.0.11",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.2",
+    "eslint": "^7.24.0",
+    "eslint-plugin-vue": "^7.9.0",
+    "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.5.0",
     "sass": "^1.32.10",
