--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "@vue/compiler-sfc": "^3.0.11",
+    "@vue/eslint-config-airbnb": "^5.3.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.2",
     "eslint": "^7.24.0",
@@ -33,6 +34,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@vue/eslint-config-typescript": "^7.0.0",
     "typescript": "^4.2.4",
     "vue": "^3.0.11",
     "vue-router": "^4.0.6",
