--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode=production",
-    "dev": "webpack serve --mode=development --open"
+    "dev": "webpack serve --mode=development --open",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "@vue/compiler-sfc": "^3.0.11",
@@ -19,9 +22,11 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.2",
     "eslint": "^7.24.0",
+    "eslint-plugin-jest": "^24.3.5",
     "eslint-plugin-vue": "^7.9.0",
     "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.5.0",
     "sass": "^1.32.10",
     "sass-loader": "^11.0.1",
