--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode=production",
-    "dev": "webpack serve --mode=development --open",
+    "dev": "webpack serve --mode=development --history-api-fallback --open ",
     "test": "jest"
   },
   "devDependencies": {
